gitops/apps/development/pihole/hetzner/patch-ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ui
spec:
  tls:
    - hosts:
        - pihole-hetzner
